--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Md Soumike Hassan - Data Scientist Portfolio</title>
+    <title>Muhammad Al Amin Dewan - Health System Researcher</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&family=Open+Sans:wght@300;400&family=Dancing+Script:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -47,7 +47,7 @@
                 <div class="profile-image-container" data-aos="fade-down" data-aos-duration="1000">
                     <img src="Image/Profile.jpeg" alt="Md Soumike Hassan" class="profile-image">
                 </div>
-                <h1 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200" class="hero-heading" id="typing-text" data-original-text="Hi, I am Md Soumike Hassan">Hi, I am Md Soumike Hassan</h1>
+                <h1 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200" class="hero-heading" id="typing-text" data-original-text="Hi, I am Muhammad Al Amin Dewan">Hi, I am Muhammad Al Amin Dewan</h1>
                 <p class="tagline" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">Data Scientist | Machine Learning Enthusiast | Researcher</p>
                 <div class="social-links" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
                     <a href="https://drive.google.com/file/d/1aWhDkMcVbR-KHIV9ldGLg24M1FelPzpa/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="social-btn">Resume</a>  
@@ -63,6 +63,11 @@
                     <p class="institution">Daffodil International University, Dhaka</p>
                     <p class="duration">2020 - 2024</p>
                     <p>Thesis: "Predicting Student Performance in Online Learning Environments using Machine Learning"</p>
+                </div>
+                <div class="academic-item" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+                    <h3>Higher Secondary School Certificate</h3>
+                    <p class="institution">Govt. Science College, Dhaka</p>
+                    <p class="duration">2018 - 2020</p>
                 </div>
                 <div class="academic-item" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
                     <h3>Higher Secondary School Certificate</h3>
