--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Muhammad Al Amin Dewan - Health System Researcher</title>
+    <title>Muhammad Al Amin Dewan - Public Health Researcher</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&family=Open+Sans:wght@300;400&family=Dancing+Script:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -14,7 +14,8 @@
             <div class="logo"><a href="#home">Life is Today, Tomorrow is too Late</a></div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
-                <li><a href="#academic">Academic History</a></li>
+                <li><a href="#academic">Education</a></li>
+                <li><a href="#experience">Work Experience</a></li>
                 <li><a href="#publications">Publications</a></li>
                 <li><a href="#conference">Conference</a></li>
                 <li><a href="#projects">Projects</a></li>
@@ -32,7 +33,8 @@
     <div class="mobile-nav" id="mobileNav">
         <ul>
             <li><a href="#home">Home</a></li>
-            <li><a href="#academic">Academic History</a></li>
+            <li><a href="#academic">Education</a></li>
+            <li><a href="#experience">Work Experience</a></li>
             <li><a href="#publications">Publications</a></li>
             <li><a href="#conference">Conference</a></li>
             <li><a href="#projects">Projects</a></li>
@@ -45,9 +47,9 @@
         <section id="home" class="hero-section">
             <div class="hero-content">
                 <div class="profile-image-container" data-aos="fade-down" data-aos-duration="1000">
-                    <img src="Image/Profile.jpeg" alt="Md Soumike Hassan" class="profile-image">
+                    <img src="images/profile.jpg" alt="Md Soumike Hassan" class="profile-image">
                 </div>
-                <h1 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200" class="hero-heading" id="typing-text" data-original-text="Hi, I am Muhammad Al Amin Dewan">Hi, I am Muhammad Al Amin Dewan</h1>
+                <h1 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200" class="hero-heading" id="typing-text" data-original-text="Hi, I am Md Soumike Hassan">Hi, I am Md Soumike Hassan</h1>
                 <p class="tagline" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">Data Scientist | Machine Learning Enthusiast | Researcher</p>
                 <div class="social-links" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
                     <a href="https://drive.google.com/file/d/1aWhDkMcVbR-KHIV9ldGLg24M1FelPzpa/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="social-btn">Resume</a>  
@@ -56,36 +58,90 @@
         </section>
 
         <section id="academic" class="content-section">
-            <h2 data-aos="fade-right" data-aos-duration="800">Academic History</h2>
+            <h2 data-aos="fade-right" data-aos-duration="800">Education</h2>
             <div class="academic-timeline">
                 <div class="academic-item" data-aos="fade-up" data-aos-duration="1000">
-                    <h3>B.Sc. in Computer Science and Engineering</h3>
-                    <p class="institution">Daffodil International University, Dhaka</p>
+                    <h3>PhD in Future</h3>
+                    <p class="institution">USA or Europ</p>
                     <p class="duration">2020 - 2024</p>
                     <p>Thesis: "Predicting Student Performance in Online Learning Environments using Machine Learning"</p>
                 </div>
                 <div class="academic-item" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-                    <h3>Higher Secondary School Certificate</h3>
-                    <p class="institution">Govt. Science College, Dhaka</p>
-                    <p class="duration">2018 - 2020</p>
+                    <h3>MS in Statistic and Data Science</h3>
+                    <p class="institution">Jahangirnagar University</p>
+                    <p class="duration">2024 - 2025</p>
                 </div>
                 <div class="academic-item" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-                    <h3>Higher Secondary School Certificate</h3>
-                    <p class="institution">Govt. Science College, Dhaka</p>
-                    <p class="duration">2018 - 2020</p>
+                    <h3>B.Sc. in Statistic and Data Science</h3>
+                    <p class="institution">Jahangirnagar University</p>
+                    <p class="duration">2019 - 2024</p>
                 </div>
             </div>
         </section>
+
+        <section id="experience" class="content-section">
+          <h2 data-aos="fade-right" data-aos-duration="800">Work Experience</h2>
+         <div class="experience-list">
+            <div class="experience-item" data-aos="fade-up" data-aos-duration="1000">
+                <h3>Assistant Business Data Analyst </h3>
+                <p class="organization">Freelance</p>
+                <p class="duration">Sept 2024 – December 2024</p>
+                <ul class="experience-details">
+                    <li>Worked as an <strong>Assistant Business Data Analyst</strong>, supporting strategic decisions with actionable data insights.</li>
+                    <li>Designed and developed interactive dashboards using <strong>Power BI</strong> to visualize sales, performance, and KPI trends.</li>
+                    <li>Collaborated with cross-functional teams to gather requirements and translate business needs into analytical reports.</li>
+                    <li>Optimized data models for better performance and usability, ensuring accuracy and consistency across reports.</li>
+
+                </ul>
+            </div>
+            </br>
+             <div class="experience-item" data-aos="fade-up" data-aos-duration="1000">
+               <h3>Research Assistant – Machine Learning & Cyber Security</h3>
+                    <p class="organization">Personal</p>
+                    <p class="duration">Sept 2024 – Present</p>
+                    <ul class="experience-details">
+                        <li>Conducting research in <strong>Machine Learning</strong>, <strong>Deep Learning</strong>, and <strong>Reinforcement Learning</strong> with applications in cyber security.</li>
+                        <li>Proficient in leading ML/DL frameworks including <strong>TensorFlow</strong>, <strong>PyTorch</strong>, <strong>scikit-learn</strong>, and <strong>Keras</strong>.</li>
+                        <li>Developed and evaluated predictive models to detect anomalies and enhance threat detection systems.</li>
+                        <li>Collaborated with interdisciplinary teams on academic publications and research presentations.</li>
+                    </ul>
+
+            </div>
+            </br>
+             <div class="experience-item" data-aos="fade-up" data-aos-duration="1000">
+                <h3>Research Assistant</h3>
+                    <p class="organization">Department of Statistics and Data Science, Jahangirnagar University</p>
+                    <p class="duration">March 2024 – Present</p>
+                    <ul class="experience-details">
+                        <li>Assisted in applying advanced statistical techniques and data analysis for multiple academic and research projects.</li>
+                        <li>Performed data cleaning, preprocessing, and visualization using R and Python.</li>
+                        <li>Contributed to the writing, formatting, and submission of peer-reviewed research papers.</li>
+                        <li>Collaborated with faculty and graduate students on experimental design and interpretation of statistical results.</li>
+                    </ul>
+            </div>
+        </br>
+             <div class="experience-item" data-aos="fade-up" data-aos-duration="1000">
+                <h3>Research Assistant</h3>
+                <p class="organization">[Institute/University/Company Name]</p>
+                <p class="duration">Jan 2024 – Present</p>
+                <ul class="experience-details">
+                    <li>Contributed to the paper: <strong>Enhancing e-KYC Security and Privacy</strong>, published in <em>ACM Digital Library</em>.</li>
+                    <li>Worked on integrating blockchain and quantum computing for digital identity verification.</li>
+                    <li>Collaborated with a multi-institutional team of researchers across disciplines.</li>
+                </ul>
+            </div>
+         </div>
+        </section>
+
 
         <section id="publications" class="content-section">
             <h2 data-aos="fade-right" data-aos-duration="800">Publications</h2>
             <div class="publications-list">
                 <div class="publication-item" data-aos="fade-up" data-aos-duration="1000">
-                    <h3>A Deep Learning Approach for Early Detection of Rice Diseases from Leaf Images</h3>
-                    <p class="authors">Md Soumike Hassan, Dr. Mohammad Shorif Uddin, et al.</p>
-                    <p class="journal">Journal of Agricultural Informatics</p>
-                    <p class="abstract">This paper proposes a convolutional neural network (CNN) model for accurate and early detection of common rice diseases. The model achieved high accuracy on a diverse dataset of rice leaf images, demonstrating its potential for real-world agricultural applications.</p>
-                    <a href="#" class="read-more-btn">Read More</a>
+                    <h3>Enhancing e-KYC Security and Privacy: Harnessing Quantum Computing and Blockchain in Web 3.0</h3>
+                    <p class="authors">G. M. Faruk Ahmed, Imran Hasan, Md Soumike Hassan, Rahul Khan, Abu Jor Al Gefari, Zain Buksh, Joseph Liu, A B M Shawkat Ali</p>
+                    <p class="journal">ACM</p>
+                    <a href="https://dl.acm.org/doi/10.1145/3686166" class="read-more-btn">Read More</a>
                 </div>
             </div>
         </section>
@@ -94,9 +150,9 @@
             <h2 data-aos="fade-right" data-aos-duration="800">Conference</h2>
             <div class="conference-list">
                 <div class="conference-item" data-aos="fade-up" data-aos-duration="1000">
-                    <h3>Presented "Predicting Customer Churn in Telecom Industry using Ensemble Learning"</h3>
-                    <p class="details">International Conference on Data Science and Advanced Analytics (ICDSAA 2023)</p>
-                    <p class="duration">December 10-12, 2023</p>
+                    <h3>Using Machine learning and SMOTE to Predict Under-5 Mortality in Minority Class: Evidence from BDHS 2022</h3>
+                    <p class="details">RURS 1st International Student Conference & Research Fair</p>
+                    <p class="duration">February 22-23, 2025</p>
                 </div>
             </div>
         </section>
@@ -105,28 +161,40 @@
             <h2 data-aos="fade-right" data-aos-duration="800">Projects</h2>
             <div class="projects-grid">
                 <div class="project-card" data-aos="fade-up" data-aos-duration="1000">
-                    <h3>Sentiment Analysis of Social Media Data</h3>
-                    <p class="tech-stack">Python, NLTK, Scikit-learn, Flask</p>
-                    <p>Developed a web application to perform real-time sentiment analysis on tweets, categorizing them as positive, negative, or neutral. Utilized machine learning models trained on a large corpus of labeled data.</p>
+                    <h3>Built a Small Language Model (SLM) from Scratch</h3>
+                    <p class="tech-stack">Python, PyTorch, Scikit-learn,Transfomer</p>
+                    <ul>
+                    <li>Built a custom Small Language Model (SLM) from scratch using Python and PyTorch</li>
+                    <li>Trained on private dataset with Transformers and Scikit-learn for preprocessing and evaluation</li>
+                    </ul>
+
                     <div class="project-links">
-                        <a href="https://github.com/soumikehassan/Sentiment-Analysis-App" target="_blank" rel="noopener noreferrer" class="project-btn">GitHub Repo</a>
-                        <a href="#" class="project-btn">Live Demo</a>
+                        <a href="https://github.com/soumikehassan/Small-Language-Model/" target="_blank" rel="noopener noreferrer" class="project-btn">GitHub Repo</a>
                     </div>
                 </div>
+
                 <div class="project-card" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-                    <h3>E-commerce Sales Prediction</h3>
-                    <p class="tech-stack">Python, Pandas, NumPy, Prophet, Tableau</p>
-                    <p>Built a time-series forecasting model to predict future sales for an e-commerce platform. Integrated the model with Tableau for interactive visualization of predictions and key performance indicators.</p>
+                    <h3>Resume-Job-Description-Matcher </h3>
+                    <p class="tech-stack">Python, Pandas, NumPy, spaCy / NLTK , streamlit</p>
+                    <ul>
+                        <li>Built an NLP system to match resumes with job descriptions using TF-IDF & cosine similarity</li>
+                        <li>Used spaCy/NLTK for preprocessing and Streamlit for interactive web deployment</li>
+                    </ul>
                     <div class="project-links">
-                        <a href="https://github.com/soumikehassan/E-commerce-Sales-Prediction" target="_blank" rel="noopener noreferrer" class="project-btn">GitHub Repo</a>
+                        <a href="https://github.com/soumikehassan/Resume-Job-Description-Matcher" target="_blank" rel="noopener noreferrer" class="project-btn">GitHub Repo</a>
+                        <a href="https://resume-job-description-matcher.streamlit.app/" class="project-btn">Live Demo</a>
                     </div>
                 </div>
                 <div class="project-card" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
-                    <h3>Credit Card Fraud Detection</h3>
-                    <p class="tech-stack">Python, TensorFlow, Keras, Imbalanced-learn</p>
-                    <p>Implemented a deep learning model to detect fraudulent credit card transactions in a highly imbalanced dataset. Employed various techniques to handle class imbalance, achieving high precision and recall.</p>
+                    <h3>Music Store Data Analysis Using SQL</h3>
+                    <p class="tech-stack">PostgreSQL, pgAdmin</p>
+                    <ul>
+                        <li>Conducted data analysis on a music store database using SQL and pgAdmin</li>
+                        <li>advanced queries with joins, subqueries, and aggregations to extract customer and sales insights</li>
+                        <li>Identified top-selling genres and customer purchase patterns to support strategic decision-making</li>
+                    </ul>
                     <div class="project-links">
-                        <a href="https://github.com/soumikehassan/Credit-Card-Fraud-Detection" target="_blank" rel="noopener noreferrer" class="project-btn">GitHub Repo</a>
+                        <a href="https://github.com/soumikehassan/SQL-Music-Store-Analysis" target="_blank" rel="noopener noreferrer" class="project-btn">GitHub Repo</a>
                     </div>
                 </div>
             </div>
@@ -141,7 +209,6 @@
                         <li>Python (Pandas, NumPy, Scikit-learn, TensorFlow, Keras)</li>
                         <li>R</li>
                         <li>SQL</li>
-                        <li>Java</li>
                     </ul>
                 </div>
                 <div class="skills-category" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
@@ -161,8 +228,7 @@
                         <li>Jupyter Notebook, VS Code</li>
                         <li>Git, GitHub</li>
                         <li>Docker</li>
-                        <li>Google Cloud Platform (GCP) - Basics</li>
-                        <li>Tableau, Power BI</li>
+                        <li>Power BI</li>
                     </ul>
                 </div>
                 <div class="skills-category" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
